--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,11 @@ lunr==0.5.8
 Markdown==3.3.4
 MarkupSafe==1.1.1
 mkdocs==1.1.2
+mkdocs-material==7.1.4
+mkdocs-material-extensions==1.0.1
 nltk==3.6.2
+Pygments==2.9.0
+pymdown-extensions==8.2
 PyYAML==5.4.1
 regex==2021.4.4
 six==1.16.0
